<resources>
    <string name="app_name">PartyumManager</string>
    <string name="logo">파티움 로고</string>
    <string name="title_img">파티움 타이틀</string>
    <string name="groom">신랑</string>
    <string name="bride">신부</string>

    <string name="datetime_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="date_format">yyyy년 M월 d일</string>
    <string name="date_format_for_file">yyyy-MM-dd</string>

    <string name="stub_groom">진윤섭</string>
    <string name="stub_bride">김은희</string>

    <string name="stub_datetime">2021–07–14 17:53:09</string>
    <string name="phone_regex">^\\d{3}-\\d{3,4}-\\d{4}$</string>
    <string name="datetime_regex">^(20[1–9][0-9])-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1]) ([0-1][0-9]|2[0-3]):([0-5][0-9]):([0-5][0-9])$</string>
    <string name="data_retrieved">데이터를 가져왔습니다.</string>

    <!-- 메인 화면 -->
    <string name="consulting">상담</string>
    <string name="new_reservation">새 예약</string>
    <string name="search">검색</string>
    <string name="reservation_status">예약 현황</string>
    <string name="administrator">관리자</string>
    <string name="copyright_info">Copyright 2021. Partyum House Suwon. All rights reserved.</string>
    <string name="main_button_divider">메인 버튼 나누기</string>

    <dimen name="main_button_margin">0dp</dimen>
    <dimen name="main_button_size">25sp</dimen>
    <dimen name="main_button_padding">10dp</dimen>

    <string name="main_to_reservation_intent">reservations</string>


    <!-- 새 예약 -->
    <string name="new_reservation_desc">수정/생성할 예약의 정보를 입력해주세요.</string>
    <string name="new_groom_name">신랑 이름</string>
    <string name="new_groom_number">신랑 번호</string>
    <string name="new_bride_name">신부 이름</string>
    <string name="new_bride_number">신부 번호</string>
    <string name="new_reservation_submit">제출</string>

    <!-- 검색 -->
    <string name="search_input">신랑/신부 전화번호</string>
    <string name="search_submit">검색</string>
    <string name="search_description">신랑 혹은 신부님의 전화번호를 입력해주세요.</string>
    <string name="search_not_found">검색 결과가 없습니다.</string>
    <string name="search_invalid_number">잘못된 전화번호입니다.</string>


    <!-- 예약 화면 -->
    <dimen name="reservation_item_name_size">20sp</dimen>
    <dimen name="reservation_item_pos_size">14sp</dimen>
    <string name="reservation_select_desc">예약건을 선택해주세요.</string>
    <string name="document_to_add_select_desc">새로 만들 문서를 선택해주세요.</string>

    <string-array name="document_types">
        <item>상담카드|csc</item>
        <item>예식 안내서|est</item>
        <item>약관 안내|tos</item>
        <item>계약서|ctr</item>
        <item>계산서|stm</item>
    </string-array>

    <string name="add_docu">문서 추가</string>
    <string name="created_date_time">생성 시간: </string>
    <string name="modified_date_time">수정 시간: </string>
    <string name="document_add_warning">계약서는 한 장만 추가할 수 있습니다.</string>
    <string name="reservation_to_document_intent">document</string>

    <!-- 문서 화면 -->
    <string name="document_history">수정 내역</string>
    <string name="document_export">내보내기</string>
    <string name="document_send_to_db">업로드</string>
    <string name="delete">삭제</string>
    <string name="modify">수정</string>

    <!-- 삭제 프래그먼트 -->
    <string name="delete_notice0">주의!</string>
    <string name="delete_notice1">이 데이터는 파티움 데이터베이스에선 삭제되지 않습니다.</string>
    <string name="delete_notice2">그러나 앱에서 삭제된 데이터는 복구할 수 없습니다.</string>
    <string name="delete_notice3">삭제하시겠습니까?</string>
    <string name="delete_yes">예</string>
    <string name="delete_no">아니오</string>

    <!-- 수정 프래그먼트 -->
    <string name="modify_desc">수정할 정보를 입력해주세요.</string>
    <string name="modify_invalid">잘못된 날짜 형식입니다.</string>
    <string name="modify_form">예: 2018–10–07 17:09:14</string>
    <string name="modify_submit">수정</string>

</resources>
