<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        >
    <data>
        <import type="com.partyum.partyummanager.base.BaseViewModel"/>
        <import type="com.partyum.partyummanager.base.Command"/>
        <variable
                name="viewModel"
                type="BaseViewModel" />
        <variable
                name="command"
                type="Command" />
    </data>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_reservation_desc"
                android:textColor="@color/black" />

            <TextView
                    android:id="@+id/invalid_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_invalid_number"
                    android:textColor="@color/red"
                    />
            <TextView
                    android:id="@+id/invalid_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modify_invalid"
                    android:textColor="@color/red"
                    />

        <View
                android:layout_width="0dp"
                android:layout_height="30dp" />

        <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="3"
                android:columnCount="2">

            <EditText
                    android:id="@+id/et_new_groom_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_groom_name"
                    android:autofillHints="@string/new_groom_name"
                    android:inputType="text"
                    android:layout_marginEnd="15dp" />

            <EditText
                    android:listener="@{&quot;&quot;}"
                    android:id="@+id/et_new_groom_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_groom_number"
                    android:autofillHints="@string/new_groom_number"
                    android:inputType="phone" />

            <EditText
                    android:id="@+id/et_new_bride_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_bride_name"
                    android:autofillHints="@string/new_bride_name"
                    android:inputType="text"
                    android:layout_marginEnd="15dp" />

            <EditText
                    android:listener="@{&quot;&quot;}"
                    android:id="@+id/et_new_bride_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_bride_number"
                    android:autofillHints="@string/new_bride_number"
                    android:inputType="phone" />

            <TextView
                    android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_date_time"/>

            <EditText
                    android:id="@+id/et_created_date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/modify_form"/>
        </GridLayout>

        <Button
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_reservation_submit"
                android:onClick="@{()->viewModel.onClick(Command.NEW_RESERVATION_SUBMITTED)}"
                />

    </LinearLayout>

</layout>