<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.partyum.partyummanager.base.Command" />

        <variable
                name="mainVM"
                type="com.partyum.partyummanager.main.MainViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5"
            android:gravity="center"
            android:orientation="vertical">

        <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/iv_partyum_title"
                android:layout_margin="30dp"
                android:contentDescription="@string/title_img"
                android:layout_weight="1"
                android:adjustViewBounds="true" />


        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:columnCount="3"

                android:rowCount="1">

            <View
                    android:layout_width="0dp"
                    android:layout_columnWeight="2"
                    android:layout_height="0dp"/>

            <LinearLayout
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                <TextView
                        style="@style/main_button_theme"
                        android:text="@string/new_reservation"
                        android:onClick="@{()->mainVM.onClick(Command.NEW_RESERVATION)}" />

                <ImageView
                        style="@style/main_button_divider"
                        android:contentDescription="@string/main_button_divider" />

                <TextView
                        style="@style/main_button_theme"
                        android:text="@string/search"
                        android:onClick="@{()->mainVM.onClick(Command.SEARCH_RESERVATION)}" />

                <ImageView
                        style="@style/main_button_divider"
                        android:contentDescription="@string/main_button_divider" />

                <TextView
                        style="@style/main_button_theme"
                        android:text="@string/reservation_status"
                        android:onClick="@{()->mainVM.onClick(Command.RESERVATION_STATUS)}" />

                <ImageView
                        style="@style/main_button_divider"
                        android:contentDescription="@string/main_button_divider" />

                <TextView
                        style="@style/main_button_theme"
                        android:text="@string/administrator"
                        android:onClick="@{()->mainVM.onClick(Command.ADMINISTRATOR)}" />

            </LinearLayout>

            <View
                    android:layout_columnWeight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

        </GridLayout>

        <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1.7" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:layout_gravity="center"
                android:text="@string/copyright_info" />

    </LinearLayout>
</layout>