<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.partyum.partyummanager.document.DocumentViewModel"/>
        <import type="com.partyum.partyummanager.base.Command"/>
        <variable
                name="viewModel"
                type="DocumentViewModel" />
    </data>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="30dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/modify_desc"/>

        <TextView
                android:id="@+id/invalid_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/modify_invalid"/>

        <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="문서 이름: "
                    android:textColor="@color/black"
                    />

            <EditText
                    android:id="@+id/et_modifying_document_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/created_date_time"
                    />

            <EditText
                    android:hint="@string/stub_datetime"
                    android:id="@+id/et_modifying_created_date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </GridLayout>


        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify"
                android:onClick="@{()->viewModel.onClick(Command.MODIFIED_DOCUMENT_SUBMITTED)}"
                />

    </LinearLayout>
</layout>