<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.partyum.partyummanager.main.Command"/>

        <variable
                name="mainVM"
                type="com.partyum.partyummanager.main.MainViewModel" />
    </data>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tv_input_number_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_description"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="30dp"
                android:layout_gravity="center" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_not_found"
                android:textColor="@color/red"
                android:layout_gravity="center"
                android:id="@+id/tv_search_not_found"
                android:visibility="gone"
                />

        <View
                android:id="@+id/v_void"
                android:layout_width="0dp"
                android:layout_height="30dp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp">

            <EditText
                    android:id="@+id/et_input_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_input"
                    android:autofillHints="@string/search_input"
                    android:layout_marginEnd="10dp"
                    android:inputType="phone"
                    android:maxLength="13" />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_submit"
                    android:onClick="@{()->mainVM.onClick(Command.NUMBER_SUBMITTED)}" />
        </LinearLayout>

    </LinearLayout>

</layout>