<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.partyum.partyummanager.reservation.ReservationViewModel" />
        <import type="com.partyum.partyummanager.base.Command"/>

        <variable
                name="viewModel"
                type="ReservationViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                >

            <LinearLayout
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        >

                    <TextView
                            style="@style/reservation_item_pos"
                            android:text="@string/groom" />

                    <TextView
                            style="@style/reservation_item_name"
                            android:text="@{viewModel.reservationInfo.groomName}" />

                    <View
                            android:layout_width="30dp"
                            android:layout_height="0dp" />

                    <TextView
                            style="@style/reservation_item_pos"
                            android:text="@string/bride" />

                    <TextView
                            style="@style/reservation_item_name"
                            android:text="@{viewModel.reservationInfo.brideName}" />

                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="15dp"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content"
                        >
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/created_date_time"
                                    android:layout_marginEnd="5dp"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{viewModel.reservationInfo.createdDateTime}"/>

                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="5dp"
                                    android:text="@string/modified_date_time"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{viewModel.reservationInfo.modifiedDateTime}"/>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                    <ImageView
                            android:id="@+id/iv_reservation_more"
                            android:layout_gravity="end"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_baseline_more_vert_24"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp">

            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    >

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_docs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

            </androidx.core.widget.NestedScrollView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>